--- a/app/views/default/reset_password.html.erb
+++ b/app/views/default/reset_password.html.erb
@@ -1,1 +1,63 @@
-adfadfadf
+<div ng-controller="YomuLabsDefaultCtrl">
+	<!-- Change Password -->
+	<header id="articleHeader">
+	  <div class="col-md-5 col-sm-10  col-centered clearfix">
+	   	<h1 id="logo" class="pull-left">
+	   		<a href="#">
+	   			<img class="logo-head" alt="logo" src="/assets/logo_icon_nobg.svg" height="50" width="50" />
+	 			</a>
+			</h1>
+			<aside class="pull-right">
+				<div class="dropdown" id="dropdownMenuTop">
+					<div class="dropdown-toggle" id="dropdownMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+						<div class="frame"><img alt="avtar" src="/assets/avtar.jpg" /></div>
+						{{current_user_name}}
+					</div>
+					<!--
+	     		<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+						<li><a href="#">Admin</a></li>
+						<li role="separator" class="divider"></li>
+						<li><a href="#">Settings</a></li>
+						<li role="separator" class="divider"></li>
+						<li><a href="#">Log Out</a></li>
+					</ul>
+					-->
+	   		</div>
+	 		</aside> 
+		</div>
+	</header>
+
+	<section id="changePassword">
+		<div class="col-md-5 col-centered" ng-init="fetch_user_by_token('<%=params[:token]%>');" >
+
+			<form class="form-horizontal">
+				<div class="form-group">
+				  <label for="email" class="col-sm-4 control-label">Email</label>
+				  <div class="col-sm-8">
+				    <input type="email" class="form-control" id="email" ng-model="reset_password_form.email" name="email" required="required" placeholder="{{current_user_email}}" readonly />
+				  </div>
+				</div>
+				<div class="form-group">
+				  <label for="password" class="col-sm-4 control-label">Password</label>
+				  <div class="col-sm-8">
+				   <input type="text" class="form-control" id="password" ng-model="reset_password_form.password" name="password" required="required" placeholder="Password *" />
+				  </div>
+				</div>
+				<div class="form-group">
+				  <label for="curpassword" class="col-sm-4 control-label">Current Password</label>
+				  <div class="col-sm-8">
+				   <input type="text" class="form-control" id="curpassword" ng-model="reset_password_form.password_confirmation" name="password_confirmation" required="required" placeholder="Password Confirmation *" /> 
+				  </div>
+				</div>
+
+				<div class="form-group">
+					<div class="text-right actions col-sm-9 pull-right">
+						<button type="submit" class="btn btn-primary">Update</button>
+						<button type="button" class="btn btn-default cancelBtn">Cancel</button>
+					</div>
+				</div>
+			</form>
+
+		</div>	
+	</section>
+</div>
