--- a/app/views/default/reset_password.html.erb
+++ b/app/views/default/reset_password.html.erb
@@ -29,8 +29,8 @@
 
 	<section id="changePassword">
 		<div class="col-md-5 col-centered" ng-init="fetch_user_by_token('<%=params[:token]%>');" >
-
-			<form class="form-horizontal">
+			<p id="errorMsg" class="error small ng-binding" ng-show="message_box != ''">{{message_box}}</p>
+			<form class="form-horizontal" novalidate>
 				<div class="form-group">
 				  <label for="email" class="col-sm-4 control-label">Email</label>
 				  <div class="col-sm-8">
@@ -40,19 +40,19 @@
 				<div class="form-group">
 				  <label for="password" class="col-sm-4 control-label">Password</label>
 				  <div class="col-sm-8">
-				   <input type="text" class="form-control" id="password" ng-model="reset_password_form.password" name="password" required="required" placeholder="Password *" />
+				   <input type="password" class="form-control" id="password" ng-model="reset_password_form.password" name="password" required="required" placeholder="Password *" />
 				  </div>
 				</div>
 				<div class="form-group">
 				  <label for="curpassword" class="col-sm-4 control-label">Current Password</label>
 				  <div class="col-sm-8">
-				   <input type="text" class="form-control" id="curpassword" ng-model="reset_password_form.password_confirmation" name="password_confirmation" required="required" placeholder="Password Confirmation *" /> 
+				   <input type="password" class="form-control" id="curpassword" ng-model="reset_password_form.password_confirmation" name="password_confirmation" required="required" placeholder="Password Confirmation *" /> 
 				  </div>
 				</div>
 
 				<div class="form-group">
 					<div class="text-right actions col-sm-9 pull-right">
-						<button type="submit" class="btn btn-primary">Update</button>
+						<button type="submit" class="btn btn-primary" ng-click="set_new_password_using_token('<%=params[:token]%>',reset_password_form);">Update</button>
 						<button type="button" class="btn btn-default cancelBtn">Cancel</button>
 					</div>
 				</div>
