Added SignOut Button at TellYourFriend Page

--- a/app/views/home/tell_your_friends.html.erb
+++ b/app/views/home/tell_your_friends.html.erb
@@ -89,6 +89,8 @@
       <footer id="tellyourfriendsFooter">
         <p class="text-center">You will receive credit for new accounts only. We reserve the right to end the promotion at any time and to disqualify entries suspected of frauds.</p>
         <p class="text-center">Questions? <a href="#">Email</a> us.</p>
+        <p class="text-center" ng-controller="YomuLabsSignOutCtrl">Sign Out? <a href="#" ng-click="sign_out();">Click Here</a></p>
+
       </footer>
     </div>
   </section>
