--- a/app/views/home/login.html.erb
+++ b/app/views/home/login.html.erb
@@ -11,7 +11,14 @@
     </header>
 
     <div class="col-sm-6 col-md-4 col-centered" ng-init="init();">
-      <p id="errorMsg" class="error small" ng-show="error_message != ''">{{message_box}}</p>
+      
+      <!-- Message Box -->
+      <p id="message_box" class="{{message_type}} small" ng-show="message_box != ''">{{message_box}}</p>
+      <!--<p id="message_box" class="success small" ng-show="success_message != ''">{{success_message}}</p>
+      <p id="message_box" class="info small" ng-show="info_message != ''">{{info_message}}</p>
+      -->
+      <!-- End - Message Box -->
+
       <form name="login_form" role="form" class="ng-pristine ng-valid-email ng-invalid ng-invalid-required" novalidate>
         <div class="form-group">
           <input type="text" placeholder="Email" class="form-control" ng-model="loginForm.email" name="email" required="required" />
