--- a/app/views/home/login.html.erb
+++ b/app/views/home/login.html.erb
@@ -28,7 +28,7 @@
         </div>
         <div class="form-group">
           <div class="clearfix"><span class="pull-left"><input type="checkbox" /> Remember me</span>
-          <a href="#" class="pull-right" ng-click="forgot_password(loginForm);">Forgot Password?</a>
+          <a href="#" class="pull-right" ng-click="forgot_password(loginForm.email);">Forgot Password?</a>
           </div>
         </div>
         <div class="form-group">
