Changes in configuration for Sending Emails

--- a/app/views/default/reset_password.html.erb
+++ b/app/views/default/reset_password.html.erb
@@ -29,7 +29,14 @@
 
 	<section id="changePassword">
 		<div class="col-md-5 col-centered" ng-init="fetch_user_by_token('<%=params[:token]%>');" >
-			<p id="errorMsg" class="error small ng-binding" ng-show="message_box != ''">{{message_box}}</p>
+			
+			<!-- Message Box -->
+      <p id="message_box" class="{{message_type}} small" ng-show="message_box != ''">
+      	{{message_box}}
+      	<span ng-show="message_type == 'success'"> You will be redirected after {{remaining_seconds}} seconds.</span>
+      </p>
+      <!-- End - Message Box -->
+
 			<form class="form-horizontal" novalidate>
 				<div class="form-group">
 				  <label for="email" class="col-sm-4 control-label">Email</label>
