--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -23,6 +23,7 @@
       Dear <%=@resource.first_name %> <%=@resource.last_name %>,<br/><br/>
       You recently initiated a password reset for your Yomu Labs ID. To complete the process, click the link below.
       <br/>
+      If You are using 
       <a href="https://yomu-lab-staging.herokuapp.com/ResetPassword/?token=<%=@token %>">Reset Now</a>
     </p>
     <p>
