--- a/app/views/home/sign_up.html.erb
+++ b/app/views/home/sign_up.html.erb
@@ -30,6 +30,7 @@
         </div>
         <div class="form-group">
           <input type="password" placeholder="Password Confirmation *" class="form-control" ng-model="sign_up_form.password_confirmation" name="password_confirmation" required="required" />
+          <input type="text" ng-model="sign_up_form.prelaunch_ref" ng-value="<%=params[:prelaunch_ref]%>" placeholder="<%=params[:prelaunch_ref]%>">
         </div>
         <div class="form-group">
           <button type="submit" ng-click="submit_sign_up_details(sign_up_form);" class="btn btn-default btn-block submitbtn">Sign Up</button>
