Added ReferralCode Implementation

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,5 @@
+<div ng-controller="YomuLabsCtrl" ng-init="redirect_user_to_refer_your_friends();">
+
   <%= render "partials/header" %>
 
   <!-- Why Yomu Lab -->
@@ -31,3 +33,5 @@
   <!-- Footer -->
   <%= render "partials/yomu_lab_footer" %>
   <!-- End - Footer -->
+
+</div>
