Change in Referral URL

--- a/app/views/partials/_social_sign_footer.html.erb
+++ b/app/views/partials/_social_sign_footer.html.erb
@@ -2,9 +2,9 @@
   <p class="text-center">Or Log In with</p>
   <p class="text-center">
     <!-- Facebook -->
-    <a href="/users/auth/facebook" title="Share on Facebook" target="_blank" class="btn btn-facebook"><i class="fa fa-facebook"></i> Facebook</a>
+    <a href="/users/auth/facebook" title="Share on Facebook" class="btn btn-facebook"><i class="fa fa-facebook"></i> Facebook</a>
     <!-- Google+ -->
-    <a href="/users/auth/google_oauth2" title="Share on Google+" target="_blank" class="btn btn-googleplus"><i class="fa fa-google-plus"></i> Google+</a>
+    <a href="/users/auth/google_oauth2" title="Share on Google+" class="btn btn-googleplus"><i class="fa fa-google-plus"></i> Google+</a>
     <!--
 	    <a href="#" onclick="PopupCenter('http://localhost:3000/users/auth/facebook','xtf','900','500'); ">Click PopUp</a>
 	    <a href="http://localhost:3000/users/auth/facebook" class="popup-window">Open in new window</a>
