--- a/app/views/home/login.html.erb
+++ b/app/views/home/login.html.erb
@@ -26,7 +26,7 @@
         <div class="form-group">
           <div class="clearfix">
             <span class="pull-left">
-              <input type="checkbox" ng-model="loginForm.remember_me" name="remember_me" /> Remember me
+              <input type="checkbox" ng-model="loginForm.remember_me" name="remember_me" ng-checked="true" /> Remember me
             </span>
             <a href="#" class="pull-right" ng-click="forgot_password(loginForm.email);">Forgot Password?</a>
           </div>
