--- a/app/views/partials/_header.html.erb
+++ b/app/views/partials/_header.html.erb
@@ -37,7 +37,7 @@
         <!-- <p>See how you can become fluent. Take a Video Tour</p> -->
         </a> </div>
 
-        <div class="signup-button"><a class="btn" href="#" lang="en">SIGNUP - FREE</a>
+        <div class="signup-button"><a class="btn" href="/SignUp" lang="en">SIGNUP - FREE</a>
           <p lang="en">100% Free during Beta and up to 80 free readings after.
           <!-- <br> Invite your friends and earn up to six months of free subscription after Beta -->
           </p>
