--- a/app/views/partials/_yomu_lab_pricing.html.erb
+++ b/app/views/partials/_yomu_lab_pricing.html.erb
@@ -22,7 +22,7 @@
             </ul>
           </div>
           <div class="signup-button">
-            <a class="btn" href="#" lang="en">SIGNUP - FREE</a>
+            <a class="btn" href="/SignUp" lang="en">SIGNUP - FREE</a>
             <p lang="en">* Invite your friends and earn up to <br>80 free readings after Beta</p>
           </div>
         </div>
