--- a/app/views/partials/_yomu_lab_sign_up_today.html.erb
+++ b/app/views/partials/_yomu_lab_sign_up_today.html.erb
@@ -6,7 +6,7 @@
       <h3 lang="en">100% Free during Beta Period. Get up to 80 free readings after Beta.</h3>
     </header>
     <div class="row">
-      <div class="col-md-12"> <a href="" class="btn" lang="en">SIGNUP - FREE</a>
+      <div class="col-md-12"> <a href="/SignUp" class="btn" lang="en">SIGNUP - FREE</a>
         <!-- <p lang="en">Have any questions? Get in touch with us <a href="mailto:support@yomulab.com">here</a></h3> -->
       </div>
     </div>
