--- a/app/views/home/login.html.erb
+++ b/app/views/home/login.html.erb
@@ -28,7 +28,7 @@
             <span class="pull-left">
               <input type="checkbox" ng-model="loginForm.remember_me" name="remember_me" ng-true-value="'true'" ng-false-value="'false'" ng-checked="true" ng-click="set_remember_me();" /> Remember me
             </span>
-            <a href="#" class="pull-right" ng-click="forgot_password(loginForm.email);">Forgot Password?</a>
+            <a href="/ForgotPassword" class="pull-right">Forgot Password?</a>
           </div>
         </div>
         <div class="form-group">
