--- a/app/views/home/forgot_password.html.erb
+++ b/app/views/home/forgot_password.html.erb
@@ -24,7 +24,7 @@
 
         <div class="form-group">
           <button type="submit" ng-click="forgot_password(forgotPasswordForm.email);" class="btn btn-default btn-block submitbtn">
-            Send Reset Link
+            Send
           </button>
         </div>
       </form>
@@ -32,7 +32,7 @@
       <p class="small text-center">
         You will receive an e-mail with a link and instruction on how you can set a new password.
       </p>
-      <%= render "partials/social_sign_footer" %>
+      <%#= render "partials/social_sign_footer" %>
     </div>
   </div>
 </section>
