BugFix for SocialAuth

--- a/app/views/home/forgot_password.html.erb
+++ b/app/views/home/forgot_password.html.erb
@@ -1,5 +1,5 @@
 <!-- Sign up -->
-<section id="signup_Login" ng-controller="YomuLabsCtrl" ng-init="redirect_user_to_refer_your_friends();">
+<section id="signup_Login" ng-controller="YomuLabsDefaultCtrl" ng-init="set_forgot_password_page();">
   <div class="container">
     <header id="signupheader">
       <p class="text-center">
@@ -14,7 +14,10 @@
     <div class="col-sm-6 col-md-4 col-centered" ng-init="init();">
       
       <!-- Message Box -->
-      <p id="message_box" class="{{message_type}} small" ng-show="message_box != ''">{{message_box}}</p>
+      <p id="message_box" class="{{message_type}} small" ng-show="message_box != ''">
+        {{message_box}}
+        <span ng-show="message_type == 'success'"> You will be redirected after {{remaining_seconds}} seconds.</span>
+      </p>
       <!-- End - Message Box -->
 
       <form name="login_form" role="form" class="ng-pristine ng-valid-email ng-invalid ng-invalid-required" novalidate>
