Change in URL for Production Server

--- a/app/views/home/tell_your_friends.html.erb
+++ b/app/views/home/tell_your_friends.html.erb
@@ -108,10 +108,12 @@
     //var redirect_uri = "https://www.facebook.com/sharer/sharer.php?u={{referral_url}}";
     var redirect_uri = $("#refferal_url").val();
 
-    var picture_url = "https://yomu-lab-staging.herokuapp.com/assets/bg.jpg";
+    //var host_url = "https://yomu-lab-staging.herokuapp.com";
+    var host_url = "https://yomu-lab-production.herokuapp.com";
+    var picture_url = host_url+"/assets/bg.jpg";
     var caption_content = "Improve your Japanese reading - Free for a Limited Time!";
     var description = "Improve your Japanese reading effortlessly with fully translated and annotated contents, delivered daily to you.";
 
-  window.open("https://www.facebook.com/dialog/feed?app_id="+app_id+"&redirect_uri=https://www.facebook.com&link="+redirect_uri+"&picture="+picture_url+"&caption="+caption_content+"&description="+description+"&properties{text:'value1',key2:'value2'}&message='tuine&actions={name:'Improve your Japanese reading - Free for a Limited Time!',link:'https://yomu-lab-staging.herokuapp.com'}",'sharer', 'top=' + winTop + ',left=' + winLeft + ',toolbar=0,status=0,width=' + winWidth + ',height=' + winHeight);
+  window.open("https://www.facebook.com/dialog/feed?app_id="+app_id+"&redirect_uri=https://www.facebook.com&link="+redirect_uri+"&picture="+picture_url+"&caption="+caption_content+"&description="+description+"&properties{text:'value1',key2:'value2'}&message='tuine&actions={name:'Improve your Japanese reading - Free for a Limited Time!',link:'"+host_url+"'}",'sharer', 'top=' + winTop + ',left=' + winLeft + ',toolbar=0,status=0,width=' + winWidth + ',height=' + winHeight);
     }
 </script>
