--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -9,13 +9,20 @@
       Welcome to Yomu Lab. Thanks for signing up for a free account. Click this link below to confirm your account.
       <br/>
       <br/>
+      <!--
       <a href="http://localhost:3000/ReconfirmUser/?confirmation_token=<%=@token %>">Localhost:3000-Verify-Now</a>
       <br/>
-      <%= link_to 'Local-Host-Verify-Now', confirmation_url(@resource, confirmation_token: @token) %>
+      <%#= link_to 'Local-Host-Verify-Now', confirmation_url(@resource, confirmation_token: @token) %>
       <br/>
       <a href="https://yomu-lab-staging.herokuapp.com/ReconfirmUser/?confirmation_token=<%=@token %>">
         yomu-lab-staging-verify-now
       </a>
+      -->
+
+      <a href="https://yomu-lab-production.herokuapp.com/ReconfirmUser/?confirmation_token=<%=@token %>">
+        Click Here
+      </a>
+      <br/>      
       <br/>
       Yomu Labs Support
     </p>
