--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -1,17 +1,55 @@
+<!--
 <!DOCTYPE html>
 <html>
   <head>
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>Welcome to YomuLabs, <%= @user.first_name %></h1>
+    <h1>Welcome to YomuLabs, <%#= @user.first_name %></h1>
     <p>
       You have successfully signed up to YomuLabs,
-      your email address is: <%= @user.email %>.<br>
+      your email address is: <%#= @user.email %>.<br>
     </p>
     <p>
-      To login to the site, just follow this link: <a href="<%=@url%>">Yomu Labs Sign In</a>
+      To login to the site, just follow this link: <a href="<%#=@url%>">Yomu Labs Sign In</a>
     </p>
     <p>Thanks for joining and have a great day!</p>
+  </body>
+</html>
+-->
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
+  </head>
+  <body>
+    <p>
+      Hi,
+      <br/>
+      <br/>
+      Welcome to Yomu Lab. Thanks for signing up for a free account. Click this link below to confirm your account.
+      <br/>
+      <br/>
+
+      <% if @server_type == "staging" %>
+      <a href="https://yomu-lab-staging.herokuapp.com/ReconfirmUser/?confirmation_token=<%=@token %>">Click Here</a>
+      <% end %>
+
+      <% if @server_type == "production" %>
+      <a href="https://yomu-lab-production.herokuapp.com/ReconfirmUser/?confirmation_token=<%=@token %>">Click Here</a>
+      <% end %>
+
+      <% if @server_type == "localhost" %>
+      <a href="http://localhost:3000/ReconfirmUser/?confirmation_token=<%=@token %>">Click Here</a>
+      <% end %>
+
+      <% if @server_type == "yomulab" %>
+      <a href="http://yomulab.com/ReconfirmUser/?confirmation_token=<%=@token %>">Click Here</a>
+      <% end %>
+
+      <br/>      
+      <br/>
+      Yomu Labs Support
+    </p>
   </body>
 </html>
